
    For just the key highlights, see the (far more readable) file
    HIGHLIGHTS.txt.

Version 7.1  [ TODO ]

    GENERAL:
        - Regina now supports Python 3 only (not Python 2 or 3).
        - Updated the bundled copy of Normaliz to version 3.9.2 (7 Feb 2022).
        - Removed all code that was deprecated in or before version 7.0.
    ENGINE:
        Class CallableArg<...>:
            - Now a public helper class in the main regina:: namespace.
            - Now behaves gracefully if the given index is out of range.
        Class Cut:
            - New class for describing graph-style cuts on triangulations or
              facet pairings.
        Class Edge<3>:
            - Now specialised (instead of using the generic Face template).
            - New routine linkingSurface().
        Class Example<4>:
            - New routine k3().
            - Reflected the result of cp2() so that it has intersection
              form [1], not [-1].
        Class FacetPairing<dim>:
            - New routine isConnected().
            - New routines canonical() and canonicalAll().
            - In findAllPairings(), the action is no longer required to
              take the list of all automorphisms if it does not need them.
            - Renamed toTextRep() to textRep().  The old name is kept as
              a deprecated alias.
            - The IsoList type alias has changed from std::list to std::vector,
              for better performance.
        Class HilbertPrimal:
            - The header no longer includes the Normaliz headers (which
              Regina does not actually ship with its development files).
        Class Integer:
            - New tightDecode() routines.
        Class IntersectionForm:
            - New class to compute invariants of intersection forms.
        Class Isomorphism:
            - Replaced apply() with the bracket operator.  The old apply()
              is now a deprecated alias.