@@ -14,6 +14,8 @@ Version 7.1  [ TODO ]
         - Updated the bundled copy of Normaliz to version 3.9.2 (7 Feb 2022).
         - Removed all code that was deprecated in or before version 7.0.
     ENGINE:
+        Class AbelianGroup:
+            - New tightDecode() routines.
         Class CallableArg<...>:
             - Now a public helper class in the main regina:: namespace.
             - Now behaves gracefully if the given index is out of range.
